syntax = "proto3";

package tunnel;

option go_package = "github.com/aegisray/vpn-tunnel/proto/tunnel";

// VPN Tunnel Service
service TunnelService {
  // Bidirectional streaming for packet forwarding
  rpc TunnelPackets(stream PacketRequest) returns (stream PacketResponse);
  
  // Establish tunnel session
  rpc EstablishTunnel(TunnelRequest) returns (TunnelResponse);
  
  // Heartbeat to maintain connection
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// Encrypted packet data
message PacketRequest {
  string session_id = 1;
  bytes encrypted_data = 2;
  string fake_sni = 3;
  string host_header = 4;
  int64 timestamp = 5;
  uint32 packet_id = 6;
}

// Response packet data
message PacketResponse {
  string session_id = 1;
  bytes encrypted_data = 2;
  int64 timestamp = 3;
  uint32 packet_id = 4;
  bool success = 5;
  string error = 6;
}

// Tunnel establishment
message TunnelRequest {
  string client_id = 1;
  bytes public_key = 2;
  string fake_sni = 3;
  repeated string dns_servers = 4;
}

message TunnelResponse {
  string session_id = 1;
  bytes server_public_key = 2;
  bool success = 3;
  string error = 4;
  string assigned_ip = 5;
}

// Heartbeat messages
message HeartbeatRequest {
  string session_id = 1;
  int64 timestamp = 2;
}

message HeartbeatResponse {
  bool alive = 1;
  int64 timestamp = 2;
}
